WFLY-21690 Replace use of deprecated wildfly-subsystem APIs in ejb3 subsystem.